--- a/REPLACEREPONAME/1/appendix/appendix.html
+++ b/REPLACEREPONAME/1/appendix/appendix.html
@@ -34,12 +34,19 @@
     <div class="panels">
 <div class="nav-panel-menu is-active" data-panel="menu">
   <nav class="nav-menu">
-    <h3 class="title"><a href="../index.html">REPLACE Course Title</a></h3>
+    <h3 class="title"><a href="../index.html">FIXME Course Title</a></h3>
 <ul class="nav-list">
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <a class="nav-link" href="../index.html">Home</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../LABENV/index.html">Lab Environment</a>
   </li>
 </ul>
   </li>
@@ -103,12 +110,12 @@
 </div>
 <div class="nav-panel-explore" data-panel="explore">
   <div class="context">
-    <span class="title">REPLACE Course Title</span>
+    <span class="title">FIXME Course Title</span>
     <span class="version">1</span>
   </div>
   <ul class="components">
     <li class="component is-current">
-      <a class="title" href="../index.html">REPLACE Course Title</a>
+      <a class="title" href="../index.html">FIXME Course Title</a>
       <ul class="versions">
         <li class="version is-current is-latest">
           <a href="../index.html">1</a>
@@ -126,7 +133,7 @@
   <a href="../index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
-    <li><a href="../index.html">REPLACE Course Title</a></li>
+    <li><a href="../index.html">FIXME Course Title</a></li>
     <li><a href="appendix.html">Appendix A</a></li>
   </ul>
 </nav>
