deploy: 7010268b4c0d486dfe0fabd469ea50b932946ea3

--- a/REPLACEREPONAME/1/index.html
+++ b/REPLACEREPONAME/1/index.html
@@ -101,7 +101,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="appendix/appendix.html">Appendix A</a>
+    <a class="nav-link" href="appendix/appendix.html">Appendix</a>
   </li>
 </ul>
   </li>
@@ -148,7 +148,56 @@
 <h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This is an example quick course demonstrating the usage of Antora for authoring and publishing quick courses.</p>
+<p>Course Title: Course title FIXME</p>
+</div>
+<div class="paragraph">
+<p>Description:
+Course description FIXME</p>
+</div>
+<div class="paragraph">
+<p>Duration: FIXME hours</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_objectives"><a class="anchor" href="#_objectives"></a>Objectives</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>On completing this course, you should be able to:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Observable, measurable objective&#8230;&#8203;</p>
+</li>
+<li>
+<p>Observable, measurable objective&#8230;&#8203;</p>
+</li>
+<li>
+<p>Observable, measurable objective&#8230;&#8203;</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_prerequisites"><a class="anchor" href="#_prerequisites"></a>Prerequisites</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>This course assumes that you have the following prior experience:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Course or experience&#8230;&#8203;</p>
+</li>
+<li>
+<p>Course or experience&#8230;&#8203;</p>
+</li>
+<li>
+<p>Course or experience&#8230;&#8203;</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
