--- a/REPLACEREPONAME/1/LABENV/index-lab-role.html
+++ b/REPLACEREPONAME/1/LABENV/index-lab-role.html
@@ -143,8 +143,48 @@
 </aside>
 <article class="doc">
 <h1 class="page">Lab Environment</h1>
-<div class="paragraph">
-<p>FIXME: Instructions for accessing the lab environment on the ROLE platform, for this hands-on based training.</p>
+<div class="sect1">
+<h2 id="_instructions_to_launch_your_lab_on_the_red_hat_online_learning_role_platform"><a class="anchor" href="#_instructions_to_launch_your_lab_on_the_red_hat_online_learning_role_platform"></a>Instructions to Launch Your Lab on the Red Hat Online Learning (ROLE) Platform</h2>
+<div class="sectionbody">
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><strong>Log in</strong> to the <a href="#ROLE-Portal-Links">ROLE platform</a></p>
+</li>
+<li>
+<p><strong>Search</strong> for the catalog entry: <strong>FIXME Lab Catalog Name</strong>.</p>
+</li>
+<li>
+<p><strong>Click</strong> on the <strong>Launch</strong> button for the catalog entry in the search results.</p>
+</li>
+<li>
+<p>On the Course page, <strong>click</strong> the <strong>Lab Environment</strong> tab.</p>
+</li>
+<li>
+<p>Click on the <strong>Create</strong> button on the Lab Environment page to launch the lab.</p>
+</li>
+<li>
+<p>Wait for the lab creation process to complete.</p>
+</li>
+<li>
+<p>When the lab is created, refer to the <strong>SSH Private Key &amp; Instructions</strong> on the page to access your lab.</p>
+</li>
+</ol>
+</div>
+<div class="sect2">
+<h3 id="ROLE-Portal-Links"><a class="anchor" href="#ROLE-Portal-Links"></a>ROLE Portal Links</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>RedHat associates: <a href="https://role.rhu.redhat.com/rol-rhu/app/" target="_blank" rel="noopener">https://role.rhu.redhat.com/rol-rhu/app/</a></p>
+</li>
+<li>
+<p>RedHat partners: <a href="https://rol.redhat.com/rol/app" target="_blank" rel="noopener">https://rol.redhat.com/rol/app</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 </article>
   </div>
